--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -48,7 +48,8 @@
 "Prompt.underPlatformTime" = "Clicked so faster";
 
 //login
-"Login.EnterRoom" = "Enter room";
+"Login.Enter" = "Enter";
+"Login.EnterRoom" = "Enter";
 "Login.RoomIdPlaceHolder"    = "Room ID";
 "Login.nickName"  = "Name";
 "Login.Role"      = "Role";
@@ -69,7 +70,7 @@
 "KickOut.ChairmanKick" = "You have been kicked out of conference by chairman...";
 "KickOut.Repeat" = "User of the same identity has entered the room. You are blocked.";
 "KickOut.SentOutClassroom" = "You have been sent out of the room by the anchor";
-"State.teacherInBackGround" = "User pressed home button";
+"State.teacherInBackGround" = "⚠️App is switched to backstage";
 
 //role
 "Role.Me" = "me";
@@ -78,7 +79,6 @@
 "Role.Patrol"  = "patrol";
 "Role.Assistant" = "assistant";
 "Role.ToTeacher" = "to anchor";
-
 
 //say
 "Say.say" = "say something";
@@ -96,20 +96,20 @@
 //Button
 "Button.MuteAudio" = "All Mute";
 "Button.MuteAll"   = "No Mute";
-"Button.Reward"    = "Grant Trophy to All";
+"Button.Reward"    = "Reward All";
 "Button.Reset"     = "All Restore";
 "Button.Audio" = "Audio";
 "Button.ShutUpAll" = "No Chat";
-"Button.CancelShutUpAll" = "Allow Chat";
+"Button.CancelShutUpAll" = "Can Chat";
 "Button.DefaultLayout" = "Default Layout";
 "Button.DoubleLayout" = "Double Layout";
 "Button.VideoLayout" = "Video Layout";
 "Button.ManyLayout.Top" = "Top";
 "Button.ManyLayout.Speaker" = "Speaker";
 "Button.ManyLayout.Free" = "Free";
-"Button.ClassBegin"    = "Start Class";
+"Button.ClassBegin"    = "Start";
 "Button.ClassIsOver"    = "Finish";
-"Button.ClassBegin1"    = "Start Class";
+"Button.ClassBegin1"    = "Start";
 "Button.ClassIsOver1"    = "Finish";
 "Button.ClassEnd"      = "Meeting End";
 "Button.RaiseHand"     = "Raise Hand";
@@ -137,6 +137,7 @@
 "Button.Sign" = "Sign in";
 "Button.vote" = "vote";
 "Button.ReturnRoom" = "Return to live";
+"Button.AnswerSpeak" = "Answer speak";
 
 "title.ToVote" = "Start vote";
 "title.Voting" = "Voting";
@@ -156,17 +157,18 @@
 "Alert.UpdateMessage" = "New version found,recommended to download and install,update to the latest version.";
 "Alert.UpdateNow" = "Update now";
 "Alert.UpdateAfter" = "Latter";
+"Alert.CheckNetMessage" = "Please connect to the network";
 
 "Action.EnterRoom"          = "Enter room";
 "Action.ExitRoom"           = "Leave room";
 
-"Prompt.EndClass1M"         = "Meeting ends in 5 minutes，Please arrange the time";
-"Prompt.RoomToBeClosed"     = "This  class is about to shut down. ";
-"Prompt.ClassToBegin"       = "The class will start in 1 minute.";
+"Prompt.EndClass1M"         = "There are 1 minute to finish meeting. Be remained.";
+"Prompt.RoomToBeClosed"     = "This meeting is about to shut down. ";
+"Prompt.ClassToBegin"       = "The meeting will start in 1 minute.";
 "Prompt.timeoutStart.one"   = "You are ";
-"Prompt.timeoutStart.two"   = " minute late already. Time for Class!";
-"Prompt.timeoutReadyEnd.one" = "Your class is";
-"Prompt.timeoutReadyEnd.two" = "minutes overtime now. This  class will end automatically in";
+"Prompt.timeoutStart.two"   = " minute late already. Time for meeting!";
+"Prompt.timeoutReadyEnd.one" = "Your meeting is";
+"Prompt.timeoutReadyEnd.two" = "minutes overtime now. This meeting will end automatically in";
 "Prompt.timeoutReadyEnd.three" = "minutes.";
 
 "Title.DocumentList"        = "Course Lib";
@@ -183,7 +185,7 @@
 "Title.whiteBoard"          = "whiteboard";
 "Prompt.CanotOn"            = "The student's audio and video devices are unavailable. May be disabled. Please tell student to enable them.";
 
-"Prompt.FinishClass"        = "Are you sure you want to finish Meeting?";
+"Prompt.FinishClass"        = "Are you sure you want to finish meeting?";
 "Prompt.delClassFile"       = "Are you sure you want to delete this file?";
 "Prompt.KickOutStudent"     = "Are you sure you want to kick out the student?";
 "Prompt.exceeds"            = "Attendants number is over limit.";
@@ -193,11 +195,12 @@
 
 "Prompt.leaveRoom"          = "Have entered a room, quit first!";
 
-
+"Prompt.Appointment_end"           = "Notice：It‘s time to finish class";
+"Prompt.AppointmentN"           = "Notice：It‘s time to finish class.Room will be closed in %ld minutes!";
 "Prompt.Appointment30"           = "Room reservation time arrived,Will be closed in 30 minutes!";
 "Prompt.Appointment2"           = "Room reservation time arrived,Will be closed in 2 minutes!";
 "Prompt.ClassEndAppointment30"           = "Expired 30 minutes,system ended interaction";
-"Prompt.ClassEndTeacherLeave10"          = "Host left the room for 10 minutes,system ended interaction";
+"Prompt.ClassEndTeacherLeave10"          = "Host left the room for 10 minutes, system ended interaction";
 "Prompt.ClassEndAnchorLeave10"          = "Lecturer left the room for 10 minutes，system ended interaction";
 
 
@@ -262,6 +265,7 @@
 "Label.roomPlaceholder" = "Please enter your room number";
 "Label.nicknamePlaceholder" = "Please enter your nickname";
 "Label.messageBoard" = "message board";
+
 "Menu.Copy" = "copy";
 
 "Label.addFile" = "AddFile";
@@ -278,6 +282,13 @@
 "Res.lab.iget"  = "winning";
 "Res.lab.noget"   = "no rushes";
 "Res.lab.getting" = "rushing";
+"Res.lab.get" = "get";
+"Res.lab.success" = "Get chance";
+"Res.lab.fail" = "No answer";
+"Res.lab.studenting" = "wait..";
+
+"Timer.btn.start" = "Start";
+"Timer.lab.end" = "Timer end";
 
 "netstate.excellent" = "excellent";
 "netstate.medium" = "medium";
@@ -290,7 +301,7 @@
 "tool.datiqiqi"   = "Clicker";
 "tool.zhuanpan"   = "Rotary";
 "tool.jishiqi"   = "Timer";
-"tool.qiangdaqi"   = "Contest";
+"tool.qiangdaqi"   = "Vies";
 "tool.xiaobaiban"   = "Whiteboard";
 
 "tool.fabudati"   = "Release";
@@ -332,7 +343,8 @@
 "Label.Question" = "Inquiry";
 "Label.Inspect" = "inspect";
 "Label.Pass" = "Pass";
-"Label.Courseware" = "File lib";
+"Label.Courseware" = "File";
+"Label.Document" = "File";
 "Label.Room" = "Meeting";
 "Label.RoomName" = "Room name";
 "Label.To" = "To:";
@@ -341,7 +353,7 @@
 "Label.ChatToMe" = "chat to me";
 "Label.ChatList" = "Private chat list";
 "Label.Lucky" = "Luckying...";
-"Label.TeacherState" = "Host entered room,please wait";
+"Label.TeacherState" = "Host entered room, please wait";
 "Label.AnchorState" = "Lecturer entered room, please wait";
 
 
@@ -393,3 +405,10 @@
 
 "Role.Host" = "Host";
 "Role.Attendee" = "Attendee";
+
+
+"Prompt.RaiseHand_classBegain" = "Hands up after meeting";
+
+"Prompt.LowDeviceTitle" = "Device not  well enough to display more";
+"Prompt.NoCamera" = "Camera is banned";
+"Prompt.NoMicrophone" = "No Mic";
