--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hans.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 "Login.EnterRoom" = "加入房间";
 
 "Error.ServerError" = "服务器访问异常";
+"Error.TokenError" = "登录信息已失效，请重新登录";
 "Error.DomainError" = "域名输入错误";
 "Error.NewPwdEmpty" = "新密码不能为空";
 "Error.ConfirmPwdRmpty" = "确认密码不能为空";
