--- a/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 "Login.EnterRoom" = "加入房間";
 
 "Error.ServerError" = "服務器訪問異常";
+"Error.TokenError" = "登入資訊已失效，請重新登入";
 "Error.DomainError" = "域名輸入錯誤";
 "Error.NewPwdEmpty" = "新密碼不能為空";
 "Error.ConfirmPwdRmpty" = "確認密碼不能為空";
