--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -64,3 +64,4 @@
 "Error.PwdLength" = "Inconsistency between new password and confirm password";
 
 "Label.Title.Month" = "month";
+"Title.StudentNum"            = "Student number";
