--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 "SDK.VCError" = "請創建一個UIViewController";
 
 "HUD.EnteringClass" = "正在進入房間";
+"HUD.NetworkPoor" = "您的網絡較差\n正在嘗試尋找更好的線路";
 
 "Error.NoMeeting" = "會議不存在";
 "Error.NoLiving" = "直播不存在";
@@ -72,7 +73,10 @@
 "KickOut.ChairmanKick" = "您已被主席請出會議...";
 "KickOut.Repeat" = "有相同身份的用戶進入，您已經離開房間";
 "KickOut.SentOutClassroom" = "您已被老師請出房間！";
+
 "State.teacherInBackGround" = "⚠️學生把APP切到後臺了";
+"State.PoorNetWork.self" = "網絡差，建議切換Wifi/4G或重啓路由器";
+"State.PoorNetWork.other" = "用戶網絡差";
 
 //role
 "Role.Me" = "我";
@@ -132,6 +136,9 @@
 "Button.Recovery"           = "恢復";
 "Button.CancelSplitScreen"  = "取消分屏";
 "Button.SwitchVideo"        = "切換視頻";
+"Button.SetFocus"        = "設為焦點";
+"Button.CancelFocus"       = "取消焦點";
+
 "Button.nameSort" = " 名稱";
 "Button.typeSort" = " 類型";
 "Button.timeSort" = " 時間";
