--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 "SDK.VCError" = "Please create a UIViewcontroller instance";
 
 "HUD.EnteringClass" = "Entering class";
+"HUD.NetworkPoor" = "Network poor\nfind better lines";
 
 "Error.NoMeeting" = "The room doesn't exist.";
 "Error.NoLiving" = "Cannot find this Living";
@@ -72,7 +73,10 @@
 "KickOut.ChairmanKick" = "You have been kicked out of conference by chairman...";
 "KickOut.Repeat" = "User of the same identity has entered the room. You are blocked.";
 "KickOut.SentOutClassroom" = "You have been sent out of the room by the anchor";
+
 "State.teacherInBackGround" = "⚠️App is switched to backstage";
+"State.PoorNetWork.self" = "Poor network, Switch WiFi/4G or reset router";
+"State.PoorNetWork.other" = "Poor network";
 
 //role
 "Role.Me" = "me";
@@ -183,7 +187,7 @@
 "Title.UserList"            = "Name List";
 "Title.UserList.two"        = "Name List (1)";
 "Title.AreaList"            = "Optimal server";
-
+"Title.StudentNum"            = "Student number";
 "Button.remindKnow"         = "I got it.";
 "Prompt.timeoutEnd"         = "This class is about to shut down.";
 
@@ -270,7 +274,7 @@
 "Label.roomPlaceholder" = "Please enter your room number";
 "Label.nicknamePlaceholder" = "Please enter your nickname";
 "Label.messageBoard" = "message board";
-
+"Label.searchPlaceholder" = "Please enter the search content";
 "Menu.Copy" = "copy";
 
 "Label.addFile" = "AddFile";
