日历中的翻译

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -421,3 +421,5 @@
 "Prompt.LowDeviceTitle" = "Device not  well enough to display more";
 "Prompt.NoCamera" = "Camera is banned";
 "Prompt.NoMicrophone" = "No Mic";
+
+"Prompt.OnlineSchool_lessons" = "%@ lessons";
