--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 "Login.EnterRoom" = "Enter room";
 
 "Error.ServerError" = "Server access exception";
+"Error.TokenError" = "Login info is invalid, please try again";
 "Error.DomainError" = "Domain input error";
 "Error.NewPwdEmpty" = "The new password cannot be empty";
 "Error.ConfirmPwdRmpty" = "Confirm password cannot be empty";
@@ -63,3 +64,4 @@
 "Error.PwdLength" = "Inconsistency between new password and confirm password";
 
 "Label.Title.Month" = "";
+"Title.StudentNum" = "Student number";
