无麦克风权限的提示调整

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -420,6 +420,6 @@
 
 "Prompt.LowDeviceTitle" = "Device not  well enough to display more";
 "Prompt.NoCamera" = "Camera is banned";
-"Prompt.NoMicrophone" = "No Mic";
+"Prompt.NoMicrophone" = "Mic disable";
 
 
