ZHIBOXBK-580 -- 老师开启焦点布局时会出现涂鸦工具栏 ZHIBOXBK-585 -- iOS老师：如下图，应该是“全体奖杯” ZHIBOXBK-583 -- 老师端举手上台按钮不显示总人数

--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -102,7 +102,7 @@
 //Button
 "Button.MuteAudio" = "全体静音";
 "Button.MuteAll" = "全体发言";
-"Button.Reward"    = "全体奖励";
+"Button.Reward"    = "全体奖杯";
 "Button.Reset"    = "全体复位";
 "Button.Audio" = "音频授课";
 "Button.ShutUpAll" = "全体禁言";
