ZHIBOXBK-579 -- 教师端焦点布局模式下拖动右侧学生视频会退出焦点布局 ZHIBOXBK-580 -- 老师开启焦点布局时会出现涂鸦工具栏 ZHIBOXBK-566 -- PC老师，上台十二个学生，IOS移动端视频数显示正确，切换布局后，老师视频不显示

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -248,6 +248,7 @@
 "Prompt.NotRepeatChat" = "Do not repeat in the chat area";
 "Prompt.AbnormalityReport" = "Does sending an exception report help us do better?";
 
+"Prompt.CannotInput" = "Disable input";
 "Prompt.BanChat" = "you have been banned to chat";
 "Prompt.CancelBanChat" = "allow to chat";
 
