--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -415,7 +415,10 @@
 "Prompt.RaiseHand_classBegain" = "上课后才能举手";
 
 "Prompt.LowDeviceTitle" = "设备性能过低，无法显示更多视频";
-"Prompt.NoCamera" = "摄像头被禁用";
-"Prompt.NoMicrophone" = "麦克风被禁用";
+"Prompt.DisableCamera" = "摄像头被禁用";
+"Prompt.Can'tOpenCamera" = "无法打开摄像头";
+"Prompt.CameraOccupied" = "摄像头被占用";
+"Prompt.DisableMicrophone" = "麦克风被禁用";
+
 
 
