--- a/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hant-TW.lproj/Localizable.strings
@@ -419,6 +419,6 @@
 
 
 "Prompt.LowDeviceTitle" = "設備效能過低，無法顯示更多視頻";
-"Prompt.NoCamera" = "攝像頭被禁用";
-"Prompt.NoMicrophone" = "麥克風被禁用";
+"Prompt.DisableCamera" = "攝像頭被禁用";
+"Prompt.DisableMicrophone" = "麥克風被禁用";
 
