完善了videoView中的提示和翻译

--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -422,6 +422,20 @@
 "Prompt.RaiseHand_classBegain" = "Hands up after class";
 
 "Prompt.LowDeviceTitle" = "Device not  well enough to display more";
-"Prompt.DisableCamera" = "Camera is banned";
-"Prompt.DisableMicrophone" = "Mic disable";
 
+"Prompt.NoCamera" = "No Camera";
+"Prompt.DisableCamera" = "Camera is banned";
+"Prompt.Can'tOpenCamera" = "Can't open camera";
+"Prompt.CameraOccupied" = "Camera occupied";
+"Prompt.VideoLoading" = "Video loading";
+"Prompt.VideoBuffering" = "Video buffering";
+"Prompt.UDPBlocking_self" = "UDP blocking，check network/firewall";
+"Prompt.UDPBlocking_other" = "User network / firewall UDP blocking";
+
+"Prompt.NoMicrophone" = "No Mic";
+"Prompt.DisableMicrophone" = "Mic disable";
+"Prompt.Can'tOpenMicrophone" = "Can't open Mic";
+"Prompt.MicrophoneOccupied" = "Mic occupied";
+"Prompt.InvalidMicrophone" = "Invalid Mic";
+"Prompt.AudioLoading" = "Audio loading";
+"Prompt.AudioBuffering" = "Audio buffering";
