--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -415,10 +415,22 @@
 "Prompt.RaiseHand_classBegain" = "上课后才能举手";
 
 "Prompt.LowDeviceTitle" = "设备性能过低，无法显示更多视频";
-"Prompt.DisableCamera" = "摄像头被禁用";
-"Prompt.Can'tOpenCamera" = "无法打开摄像头";
-"Prompt.CameraOccupied" = "摄像头被占用";
-"Prompt.DisableMicrophone" = "麦克风被禁用";
 
+"Prompt.NoCamera" = "无摄像头";
+"Prompt.DisableCamera" = "摄像头被禁用";1
+"Prompt.Can'tOpenCamera" = "无法打开摄像头";1
+"Prompt.CameraOccupied" = "摄像头被占用";1
+"Prompt.VideoLoading" = "视频加载中";1
+"Prompt.VideoBuffering" = "正在缓冲视频";1
+"Prompt.UDPBlocking_self" = "UDP不通，请检查网络/防火墙";
+"Prompt.UDPBlocking_other" = "用户网络/防火墙UDP阻塞";
+
+"Prompt.NoMicrophone" = "无麦克风";
+"Prompt.DisableMicrophone" = "麦克风被禁用";1
+"Prompt.MicrophoneOccupied" = "麦克风被占用";1
+"Prompt.Can'tOpenMicrophone" = "无法打开麦克风";
+"Prompt.InvalidMicrophone" = "麦克风无效";
+"Prompt.AudioLoading" = "音频加载中";
+"Prompt.AudioBuffering" = "正在缓冲音频";
 
 
