--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -417,20 +417,23 @@
 
 "Prompt.LowDeviceTitle" = "设备性能过低，无法显示更多视频";
 
-"Prompt.NoCamera" = "无摄像头";
+"Prompt.DeviceUnknownError" = "未知错误";
+
+"Prompt.NoCamera" = "未发现摄像头";
 "Prompt.DisableCamera" = "摄像头被禁用";
-"Prompt.CanotOpenCamera" = "无法打开摄像头";
+"Prompt.CanotOpenCamera" = "打开摄像头失败";
 "Prompt.CameraOccupied" = "摄像头被占用";
+
 "Prompt.VideoLoading" = "视频加载中";
 "Prompt.VideoBuffering" = "正在缓冲视频";
 "Prompt.UDPBlocking_self" = "UDP不通，请检查网络/防火墙";
 "Prompt.UDPBlocking_other" = "用户网络/防火墙UDP阻塞";
 
-"Prompt.NoMicrophone" = "无麦克风";
+"Prompt.NoMicrophone" = "未发现麦克风";
 "Prompt.DisableMicrophone" = "麦克风被禁用";
-"Prompt.CanotOpenMicrophone" = "无法打开麦克风";
 "Prompt.MicrophoneOccupied" = "麦克风被占用";
+"Prompt.CanotOpenMicrophone" = "打开麦克风失败";
+
 "Prompt.InvalidMicrophone" = "麦克风无效";
 "Prompt.AudioLoading" = "音频加载中";
 "Prompt.AudioBuffering" = "正在缓冲音频";
-
