--- a/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -27,7 +27,7 @@
 "Error.pointOverRun" = "企业点数超限";
 "Error.PwdError" = "密码输入错误，请重新输入";
 "Error.AuthIncorrect" = "认证错误！";
-"Error.WaitingForNetwork" = "您的网络暂时不可用,请稍后重试";
+"Error.WaitingForNetwork" = "当前网络不可用，请检查你的网络设置";
 "Error.RoomTypeCheckError" = "房间号错误或已过期";
 "Error.CanNotConnectNetworkError" = "无法连接到服务器，请稍后再试";
 "Error.ServerError" = "服务器访问异常";
