点击上台，但数据还没有获取时，使用占位图

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -443,3 +443,5 @@
 "Prompt.InvalidMicrophone" = "Invalid Mic";
 "Prompt.AudioLoading" = "Audio loading";
 "Prompt.AudioBuffering" = "Audio buffering";
+
+"Prompt.DataLoading" = "Data loading";
