--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -443,3 +443,5 @@
 "Prompt.InvalidMicrophone" = "Invalid Mic";
 "Prompt.AudioLoading" = "Audio loading";
 "Prompt.AudioBuffering" = "Audio buffering";
+
+"Prompt.DataLoading" = "Data loading";
