会议巡课改为巡视

--- a/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/en.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "Role.Teacher" = "Host";
 "Role.Student" = "Attendee";
 "Role.Patrol"  = "patrol";
+"Role.PatrolMeeting"  = "patrol";
 "Role.Assistant" = "assistant";
 "Role.ToTeacher" = "to anchor";
 
