--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -82,7 +82,8 @@
 "Role.Me" = "我";
 "Role.Teacher" = "主持人";
 "Role.Student" = "参会者";
-"Role.Patrol"  = "巡课";
+"Role.Patrol"  = "巡视";
+"Role.PatrolMeeting"  = "巡视";
 "Role.Assistant" = "助教";
 "Role.ToTeacher" = "送给老师";
 
