--- a/YSLib/YSResources.bundle/en.lproj/Localizable.strings
+++ b/YSLib/YSResources.bundle/en.lproj/Localizable.strings
@@ -83,6 +83,7 @@
 "Role.Teacher" = "anchor";
 "Role.Student" = "student";
 "Role.Patrol"  = "patrol";
+"Role.PatrolMeeting"  = "patrol";
 "Role.Assistant" = "assistant";
 "Role.ToTeacher" = "to anchor";
 
