--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -437,3 +437,6 @@
 "Prompt.InvalidMicrophone" = "麦克风无效";
 "Prompt.AudioLoading" = "音频加载中";
 "Prompt.AudioBuffering" = "正在缓冲音频";
+
+"Button.Reload" = "加载";
+"Button.Loading" = "加载中";
