--- a/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
+++ b/YSLib/YSMeetingResources.bundle/zh-Hans.lproj/Localizable.strings
@@ -442,3 +442,5 @@
 "Prompt.DataLoading" = "数据加载中";
 "Button.Reload" = "加载";
 "Button.Loading" = "加载中";
+"Polling.Time" = "轮播时间";
+"Polling.second" = "秒/次";
