--- a/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
+++ b/YSOnlineSchool/YSOnlineSchool.bundle/en.lproj/Localizable.strings
@@ -66,3 +66,6 @@
 "Label.Title.Month" = "";
 
 "Prompt.OnlineSchool_lessons" = "%@ lessons";
+
+"Polling.Time" = "rotation time";
+"Polling.second" = "Seconds / times";
